// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reading Row renders complete 1`] = `
<a
  aria-label="Work on reading: Chapter 5 and Chapter 6 Reading"
  className="task row reading"
  data-event-id="4"
  href="/course/1/task/4"
  onClick={[Function]}
  onKeyDown={undefined}
  tabIndex={-1}
>
  <div
    className="column-icon col-sm-1 col-xs-2"
  >
    <i
      aria-label="reading icon"
      className="icon icon-lg icon-reading"
    />
  </div>
  <div
    className="title col-sm-6 col-xs-10"
  >
    Chapter 5 and Chapter 6 Reading
  </div>
  <div
    className="feedback col-sm-3 col-xs-5"
  >
    <span>
      Complete
    </span>
  </div>
  <div
    className="due-at col-sm-2 col-xs-5"
  >
    <time>
      Apr 24, 7:45pm
    </time>
  </div>
</a>
`;

exports[`Reading Row renders in progress 1`] = `
<a
  aria-label="Work on reading: Chapter 5 and Chapter 6 Reading"
  className="task row reading"
  data-event-id="4"
  href="/course/1/task/4"
  onClick={[Function]}
  onKeyDown={undefined}
  tabIndex={-1}
>
  <div
    className="column-icon col-sm-1 col-xs-2"
  >
    <i
      aria-label="reading icon"
      className="icon icon-lg icon-reading"
    />
  </div>
  <div
    className="title col-sm-6 col-xs-10"
  >
    Chapter 5 and Chapter 6 Reading
  </div>
  <div
    className="feedback col-sm-3 col-xs-5"
  >
    <span>
      In progress
    </span>
    <i
      className="info late"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </div>
  <div
    className="due-at col-sm-2 col-xs-5"
  >
    <time>
      Apr 24, 7:45pm
    </time>
  </div>
</a>
`;

exports[`Reading Row renders unstarted 1`] = `
<a
  aria-label="Work on reading: Chapter 5 and Chapter 6 Reading"
  className="task row reading"
  data-event-id="4"
  href="/course/1/task/4"
  onClick={[Function]}
  onKeyDown={undefined}
  tabIndex={-1}
>
  <div
    className="column-icon col-sm-1 col-xs-2"
  >
    <i
      aria-label="reading icon"
      className="icon icon-lg icon-reading"
    />
  </div>
  <div
    className="title col-sm-6 col-xs-10"
  >
    Chapter 5 and Chapter 6 Reading
  </div>
  <div
    className="feedback col-sm-3 col-xs-5"
  >
    <span>
      Not started
    </span>
    <i
      className="info late"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    />
  </div>
  <div
    className="due-at col-sm-2 col-xs-5"
  >
    <time>
      Apr 24, 7:45pm
    </time>
  </div>
</a>
`;
